--- a/src/main/resources/fxml/hello-view.fxml
+++ b/src/main/resources/fxml/hello-view.fxml
@@ -5,21 +5,34 @@
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.ProgressBar?>
 
-<VBox alignment="CENTER" prefHeight="502.0" prefWidth="589.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.202" fx:controller="com.cat.fsai.fx.HelloworldController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600" minWidth="800" prefHeight="600.0" prefWidth="800.0" spacing="5.0" xmlns="http://javafx.com/javafx/8.0.202" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cat.fsai.fx.HelloworldController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <LineChart fx:id="lineChart" title="测试深度图">
+   <LineChart fx:id="lineChart" title="测试深度图1">
      <xAxis>
        <CategoryAxis side="BOTTOM" fx:id="xAxis" />
      </xAxis>
      <yAxis>
-       <NumberAxis side="LEFT" fx:id="yAxis" />
+       <NumberAxis fx:id="yAxis" side="LEFT" />
      </yAxis>
    </LineChart>
-      <Label fx:id="welcomeText" />
-    <Button onAction="#setHelloText" text="Hello!" />
+
+   <HBox prefHeight="50.0" prefWidth="200.0" >
+       <DatePicker fx:id="startTime" onAction="#setStartTime"/>
+       <DatePicker fx:id="endTime"  onAction="#setEndTime"/>
+
+   </HBox>
+    <HBox prefHeight="50.0" >
+        <Label text="加载进度:" />
+        <ProgressBar accessibleText="进度条" fx:id="loadProgress" prefHeight="20.0"  prefWidth="700.0"/>
+    </HBox>
+    <Label fx:id="welcomeText" />
+    <Button onAction="#clickLoad" text="加载!" />
 </VBox>
